--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,7 +2,8 @@ img {
   border-style: solid;
   display: block;
   margin-left: auto;
-  margin-right: auto
+  margin-right: auto;
+  width: 500px;
 }
 
 h1 {
